zoom control distortion fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -173,3 +173,7 @@ ul.nav a:link, a:visited {
   width: 100%;
   height: 600px;
 }
+
+#map-canvas img {
+  max-width: none;
+}
